@@ -332,6 +332,8 @@ struct proxy_worker {
          flush_auto
     } flush_packets;           /* control AJP flushing */
     int                 flush_wait;  /* poll wait time in microseconds if flush_auto */
+    apr_interval_time_t ping_timeout;
+    char ping_timeout_set;
 };
 
 /*
